<resources>
    <string name="app_name">MarinillaTurismo</string>
    <string name="titulo">Marinilla</string>
    <string name="iniciarSes">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="repeatpassw">Repita Contraseña</string>
    <string name="email">Correo</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="LogOut">Cerrar Sesion</string>
    <string name="Llenecampos">Llene todos los campos</string>
    <string name="Mainn">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hotel1">Hotel 1</string>
    <string name="hotel2">Hotel 2</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="Hoteles">Hoteles</string>
    <string name="Hotel1">KASAKIR</string>
    <string name="Hotel2">MEGACIELO</string>
    <string name="Hotel3">VILLA COLONIA</string>
    <string name="Bares">Bares</string>
    <string name="Bar1">Toro Ebrio</string>
    <string name="Bar3">Weppa!!</string>
    <string name="Bar2">Parapapáz</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="Restaurante1">Restaurante La Torre</string>
    <string name="Restaurante2">La Parrila de Maos</string>
    <string name="Restaurante3">La Esparta</string>

    <string name="TituloHoteles">Hoteles</string>

    <string name="Titulobares">Bares</string>
    <string name="title_activity_lugares">LugaresActivity</string>

    <string name="TituloRestaurante">Restaurantes</string>
    <string name="RegistroconExito">Registro con Exito</string>

    <string name="Telefono">Telefono: </string>
    <string name="Direccion">Direccion :</string>

    <string name="telbar1">1169812</string>
    <string name="telbar2">2269812</string>
    <string name="telbar3">3369812</string>
    <string name="Dirbar1">Av 41 # 65 70</string>
    <string name="Dirbar2">Av 42 # 65 70</string>
    <string name="Dirbar3">Av 43 # 65 70</string>

    <string name="telrest1">569 05 54</string>
    <string name="telrest2">548 08 80</string>
    <string name="telrest3">545 00 81</string>
    <string name="Dirrest1">Calle 30 # 27-22</string>
    <string name="Dirrest2">Calle 29 # 28-2a </string>
    <string name="Dirrest3">Carrera 30 #30 -10 Parque principal	Marinilla Antioquia</string>

    <string name="telhot1">548 53 30</string>
    <string name="telhot2">3666937</string>
    <string name="telhot3">569 1357</string>
    <string name="Dirhot1"> Carrera 30 # 28 58</string>
    <string name="Dirhot2">Autopista Medellín- Bogotá Cl 22 Carrera 44-174 , Frente a la Ciudadela Artesanal
Marinilla, Antioquia
Colombia</string>

    <string name="Dirhot3">Autopista Medellín-Bogotá, Km 39</string>
    <string name="Offert">Grandes Descuento en Hoteles!!</string>
    <string name="title_activity_hotel_d">Lugares!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_d">Principal</string>
    <string name="Personal">Personal</string>
    <string name="title_activity_perfil_d">Mi perfil</string>
    <string name="descrip">Maravilloso lugar</string>


</resources>
