<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/md2Hoteles"
            android:icon="@drawable/ic_local_hotel_black_24dp"
            android:title="@string/Hoteles" />
        <item
            android:id="@+id/md2Restaurantes"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/Restaurantes" />
        <item
            android:id="@+id/md2Bares"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Bares" />
    </group>

    <item android:title="@string/Personal">
        <menu>
            <item
                android:id="@+id/md2Perfil"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/miPerfil" />
            <item
                android:id="@+id/md2Logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/LogOut" />
        </menu>
    </item>
</menu>
